fix time transitions in collapsable sections

--- a/_src/assets/scss/components/_form-fieldset-title.scss
+++ b/_src/assets/scss/components/_form-fieldset-title.scss
@@ -47,7 +47,7 @@
 
     animation-name: collapsable;
     animation-timing-function: ease-in-out;
-    animation-duration: 2s;
+    animation-duration: 0.2s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 
